argocd-gitops/manifests/weighted-and-header-based-routing/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-gateway
  namespace: gateway-lab
spec:
  replicas: 5
  selector:
    matchLabels:
      app: rollout-gateway
  template:
    metadata:
      labels:
        app: rollout-gateway
    spec:
      containers:
        - name: rollout-gateway
          image: lmacademy/simple-color-app:1.0.0
  strategy:
    canary:
      canaryService: rollout-gateway-canary
      stableService: rollout-gateway-stable
      dynamicStableScale: true
      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: rollout-gateway-route # our created httproute
            namespace: gateway-lab # namespace where this rollout resides
        managedRoutes:
          - name: qa-override
      steps:
        ## This is a sample of how to do a canary rollout with multiple steps. You can uncomment the below lines to see how it works.      
        # - setWeight: 30
        # - pause: {}
        # - setWeight: 40
        # - pause:
        #     duration: 10s
        # - setWeight: 60
        # - pause:
        #     duration: 10s
        # - setWeight: 80
        # - pause:
        #     duration: 10s

        ## This is a sample with header based routing. You can uncomment the below lines to see how it works.
        - setWeight: 1
        - pause:
            duration: 20s
        - setCanaryScale:
            weight: 40
        - setHeaderRoute:
            name: qa-override
            match:
              - headerName: x-canary
                headerValue:
                  exact: 'true'
        - pause: {}
        - setWeight: 30
        - pause: {}
        - setWeight: 40
        - pause:
            duration: 10s
        - setWeight: 60
        - pause:
            duration: 10s
        - setWeight: 80
        - pause:
            duration: 10s
