argocd-gitops/manifests/weighted-and-header-based-routing/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rollout-gateway-route
  namespace: gateway-lab
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
    - 'color-app.localhost'
  rules:
    - backendRefs:
        - name: rollout-gateway-stable
          port: 3000
        - name: rollout-gateway-canary
          port: 3000
